--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
   "license": "ISC",
   "devDependencies": {
     "@nomicfoundation/hardhat-toolbox": "^3.0.0",
-    "hardhat": "^2.18.3"
+    "hardhat": "^2.18.3",
+    "hardhat-gas-reporter": "^1.0.9"
   },
   "dependencies": {
     "dotenv": "^16.3.1"
