preparing to testnet

--- a/.env-example
+++ b/.env-example
@@ -1,3 +1,7 @@
+REACT_APP_ALCHEMY_KEY="XXXXXXXXXXXXXXXXXXXX"
+GENERATE_SOURCEMAP=false
 REACT_APP_PRIVATE_KEY="XXXXXXXXXXXXXXXXXXXX"
+PRIVATE_KEY_ONE="XXXXXXXXXXXXXXXXXXXX"
+PRIVATE_KEY_TWO="XXXXXXXXXXXXXXXXXXXX"
 ETHERSCAN_API_KEY="XXXXXXXXXXXXXXXXXXXX"
 COINMARKETCAP_KEY="XXXXXXXXXXXXXXXXXXXX"
